<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorverde">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/icono"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="76dp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:textColor="@color/colorrojo"
            android:background="@color/coloramarillo"
            android:onClick="Menu"
            android:id="@+id/button1"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:background="@color/coloramarillo"
            android:textColor="@color/colorrojo"
            android:onClick="acercade"
            android:textSize="40sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>